--- a/testCharta/pom.xml
+++ b/testCharta/pom.xml
@@ -66,6 +66,12 @@
             <version>1.1.1</version>
         </dependency>
 
+        <!-- extent reports -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.0.9</version>
+        </dependency>
 
     </dependencies>
 
